--- a/app/src/main/res/layout/activity_recyclerviewrestaurent.xml
+++ b/app/src/main/res/layout/activity_recyclerviewrestaurent.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".recyclerviewrestaurent">
+    tools:context=".RecyclerviewRestaurents">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/recyclerview"/>
 
 </RelativeLayout>
