--- a/app/src/main/res/layout/item_view_activites_paris.xml
+++ b/app/src/main/res/layout/item_view_activites_paris.xml
@@ -9,7 +9,9 @@
         android:id="@+id/imageview"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:layout_marginEnd="20dp"/>
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="5dp"
+        android:contentDescription="@string/description"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -18,29 +20,29 @@
         android:layout_toEndOf="@+id/imageview"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="Benidict"/>
+        tools:text="Croisière guidée sur la Seiner"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/lieu"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="30dp"
         android:layout_toEndOf="@+id/imageview"
         android:layout_below="@+id/name"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="19 Rue Sainte-Croix de la Bretonnerie, 75004 Paris"/>
+        tools:text="Port de Suffren, 75007 Paris"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/num"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="80dp"
         android:layout_toEndOf="@+id/imageview"
         android:layout_below="@+id/name"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="Téléphone : 01 42 76 91 37"/>
+        tools:text="Téléphone : 01 84 20 20 85"/>
 
     <LinearLayout
         android:layout_width="match_parent"
