--- a/app/src/main/res/layout/item_view_hebergements_paris.xml
+++ b/app/src/main/res/layout/item_view_hebergements_paris.xml
@@ -20,7 +20,7 @@
         android:layout_toEndOf="@+id/imageview"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="NOM"/>
+        tools:text="La Maison Gobert Paris Hotel Particulier"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -31,18 +31,18 @@
         android:layout_below="@+id/name"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="ADRESSE"/>
+        tools:text="10 rue gobert, 75011 Paris"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/num"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="85dp"
         android:layout_toEndOf="@+id/imageview"
         android:layout_below="@+id/name"
         android:textColor="@color/black"
         android:textSize="18sp"
-        tools:text="TELEPHONE"/>
+        tools:text="Téléphone : 09 52 79 20 26"/>
 
     <LinearLayout
         android:layout_width="match_parent"
