--- a/app/src/main/res/layout/item_view_restaurents_marseille.xml
+++ b/app/src/main/res/layout/item_view_restaurents_marseille.xml
@@ -1,6 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginTop="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:id="@+id/imageview"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="20dp"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/name"
+        android:layout_toEndOf="@+id/imageview"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:text="La Délicatesse"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/lieu"
+        android:layout_marginTop="20dp"
+        android:layout_toEndOf="@+id/imageview"
+        android:layout_below="@+id/name"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:text="7 Bd de la Libération, 13001 Marseille"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/num"
+        android:layout_marginTop="85dp"
+        android:layout_toEndOf="@+id/imageview"
+        android:layout_below="@+id/name"
+        android:textColor="@color/black"
+        android:textSize="18sp"
+        tools:text="Téléphone : 09 81 81 85 95"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/imageview"
+        android:layout_marginTop="10dp"
+        android:background="#77D353"/>
+
+
+</RelativeLayout>
